Added database script and spring actuator. Also modified security so hello is available with a sign in link

--- a/src/main/resources/templates/hello.html
+++ b/src/main/resources/templates/hello.html
@@ -6,8 +6,13 @@
 </head>
 <body>
 <h1 th:inline="text">Hello [[${#httpServletRequest.remoteUser}]]!</h1>
-<form th:action="@{/logout}" method="post">
-    <input type="submit" value="Sign Out"/>
-</form>
+<div th:if="${#httpServletRequest.remoteUser == null}">
+    <a th:href="@{/login}">Login</a>
+</div>
+<div th:if="${#httpServletRequest.remoteUser != null}">
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
 </body>
 </html>
